--- a/scss/partials/S6MaxV-Layouts/_03-video.scss
+++ b/scss/partials/S6MaxV-Layouts/_03-video.scss
@@ -29,7 +29,8 @@
     }
 
     & h2 {
-      margin-bottom: 3.2rem;
+      max-width: 80%;
+      margin: 0 auto 3.2rem auto;
 
       @media only screen and (max-width: 420px) {
         max-width: 90%;
@@ -45,7 +46,7 @@
       }
 
       @media only screen and (max-width: 420px) {
-        max-width: 90%;
+        width: 90%;
       }
     }
   }
