--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -30,6 +30,10 @@
   text-align: $align;
   color: $color;
 
+  @media only screen and (max-width: 600px) {
+    text-align: left;
+  }
+
   @media only screen and (max-width: 420px) {
     font-size: 1.6rem;
   }
@@ -40,4 +44,8 @@
   line-height: 1.6;
   text-align: $align;
   color: $color;
+
+  @media only screen and (max-width: 600px) {
+    text-align: left;
+  }
 }
