--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -15,6 +15,7 @@
   @media only screen and (max-width: 600px) {
     font-size: 3.2rem;
     line-height: 1.6;
+    text-align: left;
   }
 }
 
@@ -34,6 +35,7 @@
 
   @media only screen and (max-width: 600px) {
     font-size: 2.4rem;
+    text-align: left;
   }
 }
 
